test/semantic_errors/invalid_binaryop12.mc
void main() {
    int res;
    int a;
    char b;
    res = a / b;
}